--- a/MPCalcDeleterProducer/appsettings.json
+++ b/MPCalcDeleterProducer/appsettings.json
@@ -3,7 +3,7 @@
     "HostName": "localhost",
     "UserName": "guest",
     "Password": "guest",
-    "RountingKey": "contact.remove.remove",
+    "RoutingKey": "contact.remove.remove",
     "QueueName": "mpcalchub.contact_removed",
     "Port": "5672",
     "DLQName": "mpcalchub.contact_removed.error",
