--- a/MPCalcDeleterProducer/appsettings.json
+++ b/MPCalcDeleterProducer/appsettings.json
@@ -4,10 +4,10 @@
     "UserName": "guest",
     "Password": "guest",
     "RoutingKey": "contact.remove.remove",
-    "QueueName": "mpcalchub.contact_removed",
+    "QueueName": "mpcalchub.contact_remove",
     "Port": "5672",
-    "DLQName": "mpcalchub.contact_removed.error",
-    "DLXName": "mpcalchub.contact_removed.dlx"
+    "DLQName": "mpcalchub.contact_remove.error",
+    "DLXName": "mpcalchub.contact_remove.dlx"
   },
   "Logging": {
     "LogLevel": {
