Ajustes na fila de erros

--- a/MPCalcDeleterProducer/appsettings.Docker.json
+++ b/MPCalcDeleterProducer/appsettings.Docker.json
@@ -6,8 +6,8 @@
     "RoutingKey": "contact.remove.remove",
     "QueueName": "mpcalchub.contact_remove",
     "Port": "5672",
-    "DLQName": "mpcalchub.contact_remove.error",
-    "DLXName": "mpcalchub.contact_remove.dlx"
+    "DLQName": "mpcalchub.contact_remove_error",
+    "DLXName": "mpcalchub.contact_remove_dlx"
   },
   "Logging": {
     "LogLevel": {
