--- a/MPCalcDeleterProducer/MPCalcDeleterProducer.csproj
+++ b/MPCalcDeleterProducer/MPCalcDeleterProducer.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="prometheus-net.AspNetCore.HealthChecks" Version="8.2.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="7.3.1" />
   </ItemGroup>
 
 </Project>
